Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>PacMan 3D</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-  </head>
-
-  <body>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <div id="gameContainer">
-      <canvas id="unity-canvas" data-pixel-art="false"></canvas>
-      <script src="popup.js"></script>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>PacMan 3D</title><link rel="stylesheet" href="style.css" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><div id="gameContainer"><canvas id="unity-canvas" data-pixel-art="false"></canvas><script src="popup.js"></script></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
