--- a/index.html
+++ b/index.html
@@ -1,47 +1,1 @@
-<html lang="en">
-<head>
-  <base href="">
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Pacman rcade game">
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
-
-  <title>Pac-man</title>
-
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="assets/images/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="assets/images/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#fed049">
-  <meta name="theme-color" content="#fed049">
-
-  <style>
-    html,
-    body,
-    #root {
-      height: 100%;
-    }
-
-    body {
-      width: 100%;
-      margin: 0;
-      background-color: #000;
-    }
-
-    #root {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-    canvas {
-      width: auto !important;
-    }
-  </style>
-</head>
-<body>
-  <section id="root"></section>
-<script type="text/javascript" src="assets/pacman.085f0ad72bbe415bc630.bundle.js"></script></body>
-</html>
-
+<html lang="en"><head><base href="" /><meta charset="utf-8" /><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Pac-man</title><link rel="manifest" href="manifest.json" /><link rel="mask-icon" href="assets/images/safari-pinned-tab.svg" color="#fed049" /><meta name="theme-color" content="#fed049" /><style>html, body, #root{ height: 100%;} body{ width: 100%; margin: 0; background-color: #000;} #root{ display: flex; flex-direction: column; justify-content: center; align-items: center;} canvas{ width: auto !important;} </style><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><section id="root"></section><script type="text/javascript" src="assets/pacman.085f0ad72bbe415bc630.bundle.js" ></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
