--- a/index.html
+++ b/index.html
@@ -1,84 +1,1 @@
-<html>
-  <head>
-    <script
-      id="gamemonetize-sdk"
-      type="text/javascript"
-      src="js/sdk.js"
-    ></script>
-    <meta charset="utf-8" />
-    <meta name="theme-color" content="#2d3331" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <title>Paper.io 2</title>
-    <link rel="manifest" href="manifest.json" />
-    <link rel="icon" type="image/png" href="images/icon192.png" />
-    <link rel="shortcut icon" type="image/png" href="images/icon192.png" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/style3.css" />
-  </head>
-  <body>
-    <script type="text/javascript" src="js/window.js"></script>
-    <script type="text/javascript" src="js/loader.js"></script>
-    <script type="text/javascript" src="js/app-new-gm.js"></script>
-    <div id="game">
-      <canvas class="fadein" id="view" width="922" height="888"></canvas>
-      <div id="ui_overlay"></div>
-      <div id="ui" class="">
-        <div id="left_side"></div>
-        <div class="uibox">
-          <div class="logo"><img src="images/logo.png" /></div>
-          <div class="tips">
-            <div class="tip">
-              Bite enemy tails but don't let them bite yours!
-            </div>
-          </div>
-          <form class="play">
-            <input
-              type="text"
-              id="nick"
-              name="nick"
-              autocomplete="off"
-              placeholder="Your name"
-              maxlength="12"
-            /><button id="play" name="play" class="yellow">PLAY</button>
-          </form>
-          <div id="adbanner"></div>
-        </div>
-        <div id="right_side"></div>
-      </div>
-      <div id="footer">
-        <ul id="lng">
-          <li class="active">EN</li>
-          <li class="">RU</li>
-          <li class="">TR</li>
-          <li class="">SP</li>
-          <li class="">FR</li>
-          <li class="">NL</li>
-          <li class="">PT</li>
-          <li class="">DE</li>
-          <li class="">IT</li>
-        </ul>
-        <div id="bottom"><a href="/" target="_blank">Homepage</a></div>
-      </div>
-      <div id="overlay"></div>
-    </div>
-    <div
-      id="imaContainer"
-      style="
-        position: absolute;
-        z-index: 10000;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        background-color: rgb(0, 0, 0);
-        visibility: hidden;
-        overflow: hidden;
-      "
-    >
-      <video id="imaVideo"></video>
-    </div>
-  </body>
-</html>
+<html><head><script id="gamemonetize-sdk" type="text/javascript" src="js/sdk.js" ></script><meta name="theme-color" content="#2d3331" /><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Paper.io 2</title><link rel="stylesheet" href="css/fonts.css" /><link rel="stylesheet" href="css/style3.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script type="text/javascript" src="js/window.js"></script><script type="text/javascript" src="js/loader.js"></script><script type="text/javascript" src="js/app-new-gm.js"></script><div id="game"><canvas class="fadein" id="view" width="922" height="888"></canvas><div id="ui_overlay"></div><div id="ui" class=""><div id="left_side"></div><div class="uibox"><div class="logo"><img src="images/logo.png" /></div><div class="tips"><div class="tip">Bite enemy tails but don't let them bite yours! </div></div><form class="play"><input type="text" id="nick" name="nick" autocomplete="off" placeholder="Your name" maxlength="12" /><button id="play" name="play" class="yellow">PLAY</button></form><div id="adbanner"></div></div><div id="right_side"></div></div><div id="footer"><ul id="lng"><li class="active">EN</li><li class="">RU</li><li class="">TR</li><li class="">SP</li><li class="">FR</li><li class="">NL</li><li class="">PT</li><li class="">DE</li><li class="">IT</li></ul><div id="bottom"><a href="/" target="_blank">Homepage</a></div></div><div id="overlay"></div></div><div id="imaContainer" style=" position: absolute; z-index: 10000; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgb(0, 0, 0); visibility: hidden; overflow: hidden; " ><video id="imaVideo"></video></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
