--- a/index.html
+++ b/index.html
@@ -1,36 +1,1 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="icon" type="image/x-icon" href="thumb.png" />
-  <title>Papery Planes</title>
-
-  <script>
-    window.config = {
-      loader: "unity",
-      debug: false,
-      maxRatio: 16 / 9,
-      minRatio: 9 / 16,
-
-      title: "Papery Planes",
-
-      thumbnail: "thumb.png",
-      numScreenshots: 4,
-
-      unityWebglBuildUrl: "ppw.json",
-      unityWebglLoaderUrl: "UnityLoader.2019.1.js",
-
-      // **** Optional Settings ****
-      fileSize: 12,
-      loadingComments: ["Loading..."],
-      cachedDecompressedFileSizes: {
-        "ppw.wasm.framework.unityweb": 533280,
-        "ppw.data.unityweb": 12545865,
-        "ppw.wasm.code.unityweb": 20975416,
-      },
-    };
-  </script>
-</head>
-<body>
-  <script src="master-loader.js"></script>
-</body>
+<!DOCTYPE html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Papery Planes</title><script>window.config={ loader: "unity", debug: false, maxRatio: 16 / 9, minRatio: 9 / 16, title: "Papery Planes", thumbnail: "thumb.png", numScreenshots: 4, unityWebglBuildUrl: "ppw.json", unityWebglLoaderUrl: "UnityLoader.2019.1.js", fileSize: 12, loadingComments: ["Loading..."], cachedDecompressedFileSizes:{ "ppw.wasm.framework.unityweb": 533280, "ppw.data.unityweb": 12545865, "ppw.wasm.code.unityweb": 20975416,},}; </script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script src="master-loader.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body>
