--- a/index.html
+++ b/index.html
@@ -1,107 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Parity</title>
-
-    <script src="scripts/production.min.js"></script>
-    <link
-      href="http://fonts.googleapis.com/css?family=Poiret+One|Open+Sans"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <link
-      href="styles/mobile.css"
-      rel="stylesheet"
-      type="text/css"
-      media="screen and (max-device-width:800px)"
-    />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <meta name="viewport" content="initial-scale=1.0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-  </head>
-  <body>
-    <!-- Begin Clay -->
-    <script>
-      (function (C, l, a, y, _, i, o) {
-        (C[_] =
-          C[_] ||
-          function () {
-            (C[_].q = C[_].q || []).push(arguments);
-          }),
-          (C[_].l = 1 * new Date());
-        (i = l.createElement(a)), (o = l.getElementsByTagName(a)[0]);
-        i.async = 1;
-        i.src = y;
-        o.parentNode.insertBefore(i, o);
-      })(window, document, "script", "//cdn.wtf/sdk/v1/clay_sdk.js", "Clay");
-
-      Clay("init", { gameId: "8304" });
-    </script>
-
-    <div id="container">
-      <p id="title" class="light poiret center">parity</p>
-      <div id="box">
-        <div id="overlay">
-          <h1></h1>
-          <div id="content"></div>
-          <!-- this button is in a holder so that I can center it and control its height properly -->
-          <div id="holder">
-            <button></button>
-          </div>
-        </div>
-        <div id="swipeArea"></div>
-        <div class="dSelected" id="selector"></div>
-        <!-- The arrow that guides the user for the very first level -->
-        <div id="introtutorial"></div>
-        <table id="board">
-          <tbody id="board_body">
-            <tr>
-              <td class="cell center" data-x="0" data-y="0">4</td>
-              <td class="cell center" data-x="1" data-y="0">4</td>
-              <td class="cell center" data-x="2" data-y="0">4</td>
-            </tr>
-            <tr>
-              <td class="cell center" data-x="0" data-y="1">4</td>
-              <td class="cell center" data-x="1" data-y="1">4</td>
-              <td class="cell center" data-x="2" data-y="1">4</td>
-            </tr>
-            <tr>
-              <td class="cell center" data-x="0" data-y="2">4</td>
-              <td class="cell center selected" data-x="1" data-y="2">4</td>
-              <td class="cell center" data-x="2" data-y="2">4</td>
-            </tr>
-            <tr>
-              <td colspan="2">
-                <a id="level" href="#" class="light poiret left">level #</a>
-              </td>
-              <td colspan="2" class="right">
-                <a id="reset" href="#" class="poiret"
-                  ><img src="images/reset.png" style="width: 7vh"
-                /></a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div style="text-align: center; margin: 1vh">
-        <script
-          async
-          src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-        ></script>
-        <!-- parity_underneath_fixed -->
-        <ins
-          class="adsbygoogle"
-          style="display: inline-block; width: 320px; height: 100px"
-          data-ad-client="ca-pub-4885767461778395"
-          data-ad-slot="9072452678"
-        ></ins>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-      </div>
-      <!--<p id="about" class="light poiret center">A numbers puzzle game by <a href="http://abefehr.com/" target="_blank">Abe Fehr</a></p>-->
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Parity</title><script src="scripts/production.min.js"></script><link href="http://fonts.googleapis.com/css?family=Poiret+One|Open+Sans" rel="stylesheet" type="text/css" /><link href="styles/style.css" rel="stylesheet" type="text/css" /><link href="styles/mobile.css" rel="stylesheet" type="text/css" media="screen and (max-device-width:800px)" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><meta name="apple-mobile-web-app-capable" content="yes" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script>(function (C, l, a, y, _, i, o){ (C[_]=C[_] || function (){ (C[_].q=C[_].q || []).push(arguments);}), (C[_].l=1 * new Date()); (i=l.createElement(a)), (o=l.getElementsByTagName(a)[0]); i.async=1; i.src=y; o.parentNode.insertBefore(i, o);})(window, document, "script", "//cdn.wtf/sdk/v1/clay_sdk.js", "Clay"); Clay("init",{ gameId: "8304"}); </script><div id="container"><p id="title" class="light poiret center">parity</p><div id="box"><div id="overlay"><h1></h1><div id="content"></div><div id="holder"><button></button></div></div><div id="swipeArea"></div><div class="dSelected" id="selector"></div><div id="introtutorial"></div><table id="board"><tbody id="board_body"><tr><td class="cell center" data-x="0" data-y="0">4</td><td class="cell center" data-x="1" data-y="0">4</td><td class="cell center" data-x="2" data-y="0">4</td></tr><tr><td class="cell center" data-x="0" data-y="1">4</td><td class="cell center" data-x="1" data-y="1">4</td><td class="cell center" data-x="2" data-y="1">4</td></tr><tr><td class="cell center" data-x="0" data-y="2">4</td><td class="cell center selected" data-x="1" data-y="2">4</td><td class="cell center" data-x="2" data-y="2">4</td></tr><tr><td colspan="2"><a id="level" href="#" class="light poiret left">level #</a></td><td colspan="2" class="right"><a id="reset" href="#" class="poiret" ><img src="images/reset.png" style="width: 7vh" /></a></td></tr></tbody></table></div><div style="text-align: center; margin: 1vh"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js" ></script><ins class="adsbygoogle" style="display: inline-block; width: 320px; height: 100px" data-ad-client="ca-pub-4885767461778395" data-ad-slot="9072452678" ></ins><script>(adsbygoogle=window.adsbygoogle || []).push({}); </script></div></div><script src="pwa.js"></script><script src="toast.js"></script></body></html>
