--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html manifest="cache.appcache">
-  <head>
-    <title>The Pond</title>
-    <link rel="stylesheet" href="style.css" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <meta name="description" content="The Pond, swim free fish, swim free." />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <canvas
-      id="mainCanv"
-      style="width: 100%; height: 100%; position: absolute"
-    ></canvas>
-
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <script src="popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>The Pond</title><link rel="stylesheet" href="style.css" /><meta charset="utf-8" /><meta name="viewport" content="width=device-width, user-scalable=no" /><meta name="description" content="The Pond, swim free fish, swim free." /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><canvas id="mainCanv" style="width: 100%; height: 100%; position: absolute" ></canvas><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><script src="popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
