--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Rabbit Run</title>
-    <link
-      rel="stylesheet"
-      href="reset.min.css"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <!-- partial:index.partial.html -->
-    <div id="world" />
-    <div id="gameoverInstructions">Game Over</div>
-    <div id="dist">
-      <div class="label">distance</div>
-      <div id="distValue">000</div>
-    </div>
-
-    <div id="instructions">
-      Click to jump<span class="lightInstructions">
-        — Grab the carrots / avoid the hedgehogs</span
-      >
-    </div>
-
-
-    <!-- partial -->
-    <script src="three.js"></script>
-    <script src="TweenMax.min.js"></script>
-    <script src="OrbitControls.js"></script>
-    <script src="script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8" /><title>Rabbit Run</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="reset.min.css" /><link rel="stylesheet" href="./style.css" /><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="world" /><div id="gameoverInstructions">Game Over</div><div id="dist"><div class="label">distance</div><div id="distValue">000</div></div><div id="instructions">Click to jump<span class="lightInstructions">— Grab the carrots / avoid the hedgehogs</span ></div><script src="three.js"></script><script src="TweenMax.min.js"></script><script src="OrbitControls.js"></script><script src="script.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
