--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Rolling Forests</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="icon.png" rel="icon" />
-  </head>
-  <body id="body">
-    <div id="game"></div>
-    <div id="pausemenu"></div>
-    <script src="three.min.js"></script>
-    <script src="script.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><title>Rolling Forests</title><link href="style.css" rel="stylesheet" type="text/css" /><link rel="stylesheet" href="toast.css" /></head><body id="body"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="game"></div><div id="pausemenu"></div><script src="three.min.js"></script><script src="script.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
