--- a/index.html
+++ b/index.html
@@ -1,39 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <title>Rooftop Snipers 2</title>
-
-    <script>
-      window.config = {
-        loader: "unity",
-        debug: false,
-        maxRatio: 16 / 9,
-        minRatio: 9 / 16,
-
-        title: "Rooftop Snipers 2",
-
-        thumbnail: "895b299e7e49558ca383b23648314860.jpg",
-        numScreenshots: 4,
-
-        unityWebglBuildUrl: "RooftopSnipers2.json",
-        unityWebglLoaderUrl: "UnityLoader.js",
-
-        // **** Optional Settings ****
-        fileSize: 10,
-        loadingComments: ["Loading..."],
-        cachedDecompressedFileSizes: {
-          "RooftopSnipers2.wasm.framework.unityweb": 475014,
-          "RooftopSnipers2.data.unityweb": 9563147,
-          "RooftopSnipers2.wasm.code.unityweb": 17055668,
-        },
-        //
-      };
-    </script>
-  </head>
-  <body>
-    <script src="master-loader.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Rooftop Snipers 2</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script>window.config={ loader: "unity", debug: false, maxRatio: 16 / 9, minRatio: 9 / 16, title: "Rooftop Snipers 2", thumbnail: "895b299e7e49558ca383b23648314860.jpg", numScreenshots: 4, unityWebglBuildUrl: "RooftopSnipers2.json", unityWebglLoaderUrl: "UnityLoader.js", fileSize: 10, loadingComments: ["Loading..."], cachedDecompressedFileSizes:{ "RooftopSnipers2.wasm.framework.unityweb": 475014, "RooftopSnipers2.data.unityweb": 9563147, "RooftopSnipers2.wasm.code.unityweb": 17055668,},}; </script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script src="master-loader.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
