--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Skiing Fred</title>
-    <script>
-      window.config = {
-        loader: "unity",
-        debug: false,
-        maxRatio: 16 / 9,
-        minRatio: 9 / 16,
-
-        title: "Skiing Fred",
-        thumbnail:
-          "patch/png/null.png?https:\/\/img.poki.com\/8fda20c3a496c1dcbb03f3c55bb8c888.png",
-        numScreenshots: 8,
-
-        unityVersion: "2019.1.8f1",
-        unityWebglBuildUrl: "Build\/skiingfred-webgl-110_40.json",
-
-        fileSize: 64,
-        cachedDecompressedFileSizes: {
-          "skiingfred-webgl-110_40.data.unityweb": 43223611,
-          "skiingfred-webgl-110_40.wasm.code.unityweb": 21227658,
-          "skiingfred-webgl-110_40.wasm.framework.unityweb": 504120,
-        },
-      };
-    </script>
-  </head>
-  <body>
-    <script src="patch/js/poki-master-loader.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Skiing Fred</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><script>window.config={ loader: "unity", debug: false, maxRatio: 16 / 9, minRatio: 9 / 16, title: "Skiing Fred", thumbnail: "patch/png/null.png?https:\/\/img.poki.com\/8fda20c3a496c1dcbb03f3c55bb8c888.png", numScreenshots: 8, unityVersion: "2019.1.8f1", unityWebglBuildUrl: "Build\/skiingfred-webgl-110_40.json", fileSize: 64, cachedDecompressedFileSizes:{ "skiingfred-webgl-110_40.data.unityweb": 43223611, "skiingfred-webgl-110_40.wasm.code.unityweb": 21227658, "skiingfred-webgl-110_40.wasm.framework.unityweb": 504120,},}; </script><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><script src="patch/js/poki-master-loader.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
