Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Slime Rush TD</title>
-    <link rel="icon" href="./loading-logo.png" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
-    />
-    <style type="text/css">
-      * {
-        padding: 0;
-        margin: 0;
-      }
-      html,
-      body {
-        background: #000;
-        color: #fff;
-        overflow: hidden;
-        touch-action: none;
-        -ms-touch-action: none;
-      }
-      canvas {
-        touch-action-delay: none;
-        touch-action: none;
-        -ms-touch-action: none;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="c2canvasdiv">
-      <canvas id="c2canvas" width="1024" height="768"> </canvas>
-    </div>
-    <script src="jquery-2.1.1.min.js"></script>
-    <script src="c2runtime.js"></script>
-    <script>
-      function onVisibilityChanged() {
-        if (
-          document.hidden ||
-          document.mozHidden ||
-          document.webkitHidden ||
-          document.msHidden
-        )
-          cr_setSuspended(true);
-        else cr_setSuspended(false);
-      }
-      document.addEventListener("visibilitychange", onVisibilityChanged, false);
-      document.addEventListener(
-        "mozvisibilitychange",
-        onVisibilityChanged,
-        false
-      );
-      document.addEventListener(
-        "webkitvisibilitychange",
-        onVisibilityChanged,
-        false
-      );
-      document.addEventListener(
-        "msvisibilitychange",
-        onVisibilityChanged,
-        false
-      );
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8" /><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><title>Slime Rush TD</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><style type="text/css">*{ padding: 0; margin: 0;} html, body{ background: #000; color: #fff; overflow: hidden; touch-action: none; -ms-touch-action: none;} canvas{ touch-action-delay: none; touch-action: none; -ms-touch-action: none;} </style><link rel="stylesheet" href="toast.css" /></head><body><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="c2canvasdiv"><canvas id="c2canvas" width="1024" height="768"></canvas></div><script src="jquery-2.1.1.min.js"></script><script src="c2runtime.js"></script><script>function onVisibilityChanged(){ if ( document.hidden || document.mozHidden || document.webkitHidden || document.msHidden ) cr_setSuspended(true); else cr_setSuspended(false);} document.addEventListener("visibilitychange", onVisibilityChanged, false); document.addEventListener( "mozvisibilitychange", onVisibilityChanged, false ); document.addEventListener( "webkitvisibilitychange", onVisibilityChanged, false ); document.addEventListener( "msvisibilitychange", onVisibilityChanged, false ); </script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
