--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <title>Stair Race 3D</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <style>
                 .play-href {
             text-decoration: none;
@@ -73,9 +79,11 @@
             border: none;
         }
     </style>
-</head>
+    <link rel="stylesheet" href="toast.css" />
+  </head>
 
-<body>
+  <body>
+    <div id="toast">No Internet Needed For This Now. ENJOY!!!</div>
     <center style="margin-top: 25vh;">
         <div class="load">
                 <span class="spinner">
@@ -135,6 +143,8 @@
         });
     </script>
     
-</body>
+    <script src="pwa.js"></script>
+    <script src="toast.js"></script>
+  </body>
 
 </html>
