Compressed code and added PWA support

--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Time Sphere</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon-16x16.png"
-    />
-    <link rel="manifest" href="./site.webmanifest" />
-    <link rel="stylesheet" href="TemplateData/style.css" />
-  </head>
-
-  <body style="background-color: #f4f4f4; color: #000000">
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
-    <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 540px"></div>
-      <div class="footer">
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">Fullscreen</div>
-      </div>
-    </div>
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script src="popup.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en-us"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><title>Time Sphere</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" /><link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" /><link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" /><link rel="manifest" href="site.webmanifest" /><link rel="stylesheet" href="TemplateData/style.css" /><link rel="stylesheet" href="toast.css" /></head><body style="background-color: #f4f4f4; color: #000000"><div id="toast">No Internet Needed For This Now. ENJOY!!!</div><div id="popup" class="popup"><div class="popup-content"><h2 id="popup-title" style="color: blue"></h2><div id="popup-scrollable-content" class="popup-scrollable-content" ></div><div class="popup-buttons"><button id="yesButton" class="popup-button">Yes</button ><button id="noButton" class="popup-button">No</button></div></div></div><div class="webgl-content"><div id="unityContainer" style="width: 960px; height: 540px"></div><div class="footer"><div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div><div class="title">Fullscreen</div></div></div><script src="TemplateData/UnityProgress.js"></script><script src="Build/UnityLoader.js"></script><script src="popup.js"></script><script src="pwa.js"></script><script src="toast.js"></script></body></html>
